Add DiscordRPC, WingsModule, Companion cosmetics, CustomHotbar, InventoryButtons, UseAnimation, Surround, Aimbow; Menu mode toggle mixin; bump 0.3.5